# C2ServerBrowserBackend

./: .gitignore  Dockerfile  README.md  ci.ps1  ci.sh  publish.ps1  publish.sh  pyproject.toml  run-in-docker.ps1  run-in-docker.sh  run.sh
.github/workflows/: ci.yml  server_ci.yml
assets/: chiv2-server-browser-api.yaml
assets/motd/: en.json  en_banned.json  test.json  test_banned.json
client/: App.xaml  App.xaml.cs  Chivalry 2 Unofficial Server Browser.csproj  Chivalry 2 Unofficial Server Browser.sln  Chivalry2UnofficialServerBrowser.csproj  FodyWeavers.xml  MainWindow.xaml  MainWindow.xaml.cs  Server.cs  Swagger.cs  chiv2-server-browser-api.cs  chiv2-server-browser-api.yaml
client/docker/: dev.yml
client/docker/assets/: servers.json
config/: allow_list.txt
mock/: Dockerfile  README.md  ci.sh  publish.sh  pyproject.toml  run.sh
mock/assets/: servers.json
mock/src/mock_chiv2_host/: mock_host.py
scripts/: entrypoint.sh
server/: Dockerfile  README.md  chiv2-server-browser-api.yaml  ci.sh  main.py  pyproject.toml  run.sh
server/assets/: chiv2-server-browser-api.yaml
server/src/: main.py  models.py
server/src/server_browser_backend/: __init__.py  ban_list.py  dict_util.py  main.py  models.py  playfab.py  secured_resource.py  server_list.py  tbio.py
server/src/server_browser_backend/models/: base_models.py  playfab.py  tbio.py
server/src/server_browser_backend/routes/: __init__.py  api_v1.py  chiv2_compat.py  shared.py
server/test/server_browser_backend/: test_ServerList.py  test_ban_list.py  test_main.py  test_models.py  test_secured_resource.py  test_server_list.py
server/test/server_browser_backend/routes/: test_api_v1.py  test_chiv2_compat.py
src/server_browser_backend/: __init__.py  ban_list.py  dict_util.py  ip_list.py  main.py  secured_resource.py  server_list.py  token_reissuer.py  type_vars.py
src/server_browser_backend/models/: base_models.py  eos_models.py  playfab.py  tbio.py
src/server_browser_backend/routes/: __init__.py  api_v1.py  chiv2_compat.py  shared.py
src/test/resources/: test_add_all_to_ip_list.txt  test_ip_list_contains_ip_range.txt
src/test/server_browser_backend/: test_ban_list.py  test_ip_list.py  test_token_reissuer.py
src/test/server_browser_backend/routes/: __init__.py  test_api_v1.py  test_chiv2_compat.py
test/resources/: test_add_all_to_ban_list.txt
test/server_browser_backend/routes/: test_api_v1.py
