[tool.poetry]
name = "chivalry2-unofficial-server-browser-mock-host"
version = "0.2.0"
description = "A mock host for use in a test environment"
authors = ["Jacob Barber <Jacoby6000@gmail.com>", "DrLong <who@example.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "mock_chiv2_host", from="src/"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
requests = "^2.31.0"
types-requests = "^2.31.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
autoflake = "^2.2.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
