[project]
name = "chivalry2-unofficial-server-browser-mock-host"
version = "0.3.4"
description = "A mock host for use in a test environment"
authors = [
    {name = "Jacob Barber", email = "Jacoby6000@gmail.com"},
    {name = "DrLong", email = "who@example.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.3.0",
    "autoflake>=2.2.0",
    "mypy>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_chiv2_host"]
