[tool.poetry]
name = "chivalry2-unofficial-server-browser-backend"
version = "0.1.0"
description = "A server browser backend for unofficial chivalry2 servers. Keeps track of live servers with a heartbeat, and allows clients to list them. Probably usable for other unofficial gameservers."
authors = ["Jacob Barber <Jacoby6000@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-Limiter = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
autoflake = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
